[package]
name = "ipfs-sqlite-block-store"
version = "0.7.2"
repository = "https://github.com/actyx/ipfs-sqlite-block-store"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "David Craven <david@craven.ch>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["ipfs", "dag"]
description = "block store for ipfs, using sqlite"

[dependencies]
anyhow = "1.0.40"
derive_more = "0.99.14"
fnv = "1.0.7"
futures = "0.3.15"
libipld = { version = "0.12.0", default-features = false }
parking_lot = "0.11.1"
rusqlite = { version = "0.25.3", features = ["backup", "bundled"] }
tracing = "0.1.26"

[dev-dependencies]
itertools = "0.10.0"
libipld = { version = "0.12.0", default-features = false, features = ["derive", "dag-cbor"] }
multihash = { version = "0.14.0", default-features = false, features = ["sha2"] }
tempdir = "0.3.7"
tokio = { version = "1.6.1", features = ["full"] }
tracing-subscriber = "0.2.18"
